--- a/cv/index.html
+++ b/cv/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>CV | Oluwasegun Ige</title>
+    <title>Resume | Oluwasegun Ige</title>
 </head>
 <body>
     <header>
         <section>
             <nav>
                 <main>
-                    <span><a href="index.html">Oluwasegun Ige | CV</a></span>
+                    <span><a href="index.html">Oluwasegun Ige | Resume</a></span>
                     <section class="f-right">
                         <ul>
                             <li><a href="index.html#about">About</a></li>
@@ -26,7 +26,7 @@
             </nav>
         </section>
         <section class="text-white">
-            <img src="images/pic.jpg" alt="Passport photograph">
+            <img src="images/pic1.jpg" alt="Passport photograph">
             <h1 class="text-centre">Oluwasegun Ige</h1>
             <p class="text-uppercase text-centre">Web developer, LAN engineer</p>
         </section>
@@ -45,7 +45,7 @@
                         <h2>Basic Information</h2>
                         <section>
                             <h5>Age:</h5>
-                            <span>18</span>
+                            <span>20</span>
                         </section>
                         <section>
                             <h5>Email:</h5>
@@ -56,8 +56,8 @@
                             <span><a href="tel://+2349091051329" title="Click here to give me a call">+234(0)-909-105-1329</a></span>
                         </section>
                         <section>
-                            <h5>Address:</h5>
-                            <span>13, Satellite Motel Street, off Ajase-Ipo Road, Ilorin, Kwara State, Nigeria</span>
+                            <h5>Location:</h5>
+                            <span>Ilorin, Kwara State, Nigeria</span>
                         </section>
                     </article>
                 </section>
@@ -72,14 +72,16 @@
                         <li>CSS</li>
                         <li>JavaScript</li>
                         <li>PHP</li>
+                        <li>MySQL</li>
                     </ul>
                 </section>
                 <section>
                     <ul>
-                        <li>Network Simulation</li>
-                        <li>LAN set-up</li>
-                        <li>Object modelling using AutoCAD</li>
-                        <li>2D Computer Animation</li>
+                        <li>Python</li>
+                        <li>VB.NET</li>
+                        <li>Web development</li>
+                        <li>Object Oriented Programming</li>
+                        <li>Digital Marketing</li>
                     </ul>
                 </section>
             </div>
@@ -104,29 +106,11 @@
             <h2>Education</h2>
             <div class="container o-auto">
                 <aside class="f-left text-white text-centre">
-                    <p>2016 - 2020</p>
+                    <p>2016 - 2021</p>
                 </aside>
                 <main class="f-left">
                     <h3>Bachelor's Degree in  Computer Science</h3>
                     <h4>University of Ilorin</h4>
-                </main>
-            </div>
-            <div class="container o-auto">
-                <aside class="f-left text-white text-centre">
-                    <p>2009 - 2016</p>
-                </aside>
-                <main class="f-left">
-                    <h3>Secondary School Education</h3>
-                    <h4>Chapel Secondary School</h4>
-                </main>
-            </div>
-            <div class="container o-auto">
-                <aside class="f-left text-white text-centre">
-                    <p>2003 - 2009</p>
-                </aside>
-                <main class="f-left">
-                    <h3>Nuusery and Primary School Education</h3>
-                    <h4>Dola Star Child International Schools</h4>
                 </main>
             </div>
         </article>
@@ -145,8 +129,8 @@
                 </form>
             </aside>
             <main class="f-left">
-                <h5>Address</h5>
-                <p>13, Satellite Motel Street, off Ajase-Ipo Road, Ilorin, Kwara State, Nigeria</p>
+                <h5>Location</h5>
+                <p>Ilorin, Kwara State, Nigeria</p>
                 <h5>Phone</h5>
                 <p><a href="tel://+2349091051329">+234(0)-909-105-1329</a></p>
                 <h5>Email</h5>
